--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,8 @@ mybatis.config-location=classpath:/mybatis-config.xml
 #spring.servlet.multipart.max-file-size=50MB
 #spring.servlet.multipart.max-request-size=50MB
 
+spring.mvc.hiddenmethod.filter.enabled=true
+
 #设置文件上传的最大体积
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
