测试修改处理并发操作

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jackson.time-zone=GMT+8
 #mybatis”≥…‰Œƒº˛…®√Ë≈‰÷√
 mybatis.mapper-locations=com/management/picture/mapper/*Mapper.xml
 #mybatis»’÷æ≈‰÷√
-mybatis.config-location=classpath:/mybatis-config.xml
+#mybatis.config-location=classpath:/mybatis-config.xml
 #Redis≈‰÷√
 #spring.redis.database=0
 #spring.redis.host=182.92.208.18
