--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
             <version>2.0.4.RELEASE</version>
         </dependency>
+        <!--redis依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.0.4.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
