--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,14 +12,14 @@ mybatis.mapper-locations=com/management/picture/mapper/*Mapper.xml
 #mybatis»’÷æ≈‰÷√
 #mybatis.config-location=classpath:/mybatis-config.xml
 #Redis≈‰÷√
-#spring.redis.database=0
-#spring.redis.host=182.92.208.18
-#spring.redis.port=6379
-#spring.redis.password=Wuyue88@
-#spring.redis.jedis.pool.max-active=8
-#spring.redis.jedis.pool.max-idle=8
-#spring.redis.jedis.pool.max-wait=-1ms
-#spring.redis.jedis.pool.min-idle=0
+spring.redis.database=0
+spring.redis.host=182.92.208.18
+spring.redis.port=6379
+spring.redis.password=Wuyue88@
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.min-idle=0
 #ª∫¥Ê≈‰÷√
 #spring.cache.cache-names=menus_cache
 #spring.cache.redis.time-to-live=1800s
